🚚 Rename ios-archive-upload-asc to ReleaseKit-iOS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,10 @@ jobs:
       - name: Validate scripts syntax
         run: |
           bash -n scripts/install-asc.sh
+          bash -n scripts/install-releasekit-ios-setup.sh
           bash -n scripts/install-ios-gha-setup.sh
           bash -n scripts/run.sh
+          bash -n scripts/releasekit-ios-setup.sh
           bash -n scripts/ios-gha-setup.sh
 
       - name: Validate YAML syntax
