🏗️ Enhance CLI functionality: Add version command to display version info, update install script references, and improve CI workflows with Go vet and timeout settings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,14 +6,18 @@ on:
       - main
   pull_request:
 
+permissions:
+  contents: read
+
 jobs:
   lint-and-validate:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6
         with:
           go-version-file: cli/go.mod
 
@@ -23,6 +27,10 @@ jobs:
           bash -n scripts/archive.sh
           bash -n scripts/upload.sh
           bash -n scripts/lib/common.sh
+
+      - name: Run Go vet
+        working-directory: cli
+        run: go vet ./...
 
       - name: Run Go tests
         working-directory: cli
