--- a/.github/workflows/release-cli-beta.yml
+++ b/.github/workflows/release-cli-beta.yml
@@ -5,8 +5,8 @@ on:
     tags:
       - "v*"
 
-permissions:
-  contents: write
+# permissions:
+#   contents: write
 
 concurrency:
   group: release-cli-${{ github.ref_name }}
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v6
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6
         with:
           go-version-file: cli/go.mod
 
