⚡️ Update CI workflows: Add cache dependency path for Go modules in both CI and release workflows to improve build performance.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-go@v6
         with:
           go-version-file: cli/go.mod
+          cache-dependency-path: cli/go.sum
 
       - name: Validate scripts syntax
         run: |
