--- a/.github/workflows/release-cli-beta.yml
+++ b/.github/workflows/release-cli-beta.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/setup-go@v6
         with:
           go-version-file: cli/go.mod
+          cache-dependency-path: cli/go.sum
 
       - name: Vet CLI module
         working-directory: cli
